--- a/Project_4_Ising_Annealer/Group2-Task2.ipynb
+++ b/Project_4_Ising_Annealer/Group2-Task2.ipynb
@@ -369,18 +369,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-999.0"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Exact Energy Calculation for 10 ===\n",
+      "-8\n",
+      "\n",
+      "=== Annealing Energy Calculation for 10 ===\n",
+      "4\n",
+      "4\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "4\n",
+      "4\n",
+      "0\n",
+      "-4\n",
+      "-8\n",
+      "-8\n",
+      "-8\n",
+      "-8\n",
+      "-8\n",
+      "-8\n",
+      "-8\n",
+      "-8\n",
+      "-8\n"
+     ]
     }
    ],
    "source": [
@@ -393,73 +413,140 @@
     "ising.energy(space).min()\n",
     "print(\"=== Exact Energy Calculation for 10 ===\")\n",
     "print(ising.energy(space).min())\n",
-    "\n"
+    "\n",
+    "print(\"\\n=== Annealing Energy Calculation for 10 ===\")\n",
+    "annealed_energy = annealing_schedule(N,T_i,T_f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-4884.0"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Exact Energy Calculation for 20 ===\n",
+      "-8\n",
+      "\n",
+      "=== Annealing Energy Calculation for 20 ===\n",
+      "0\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "-4\n",
+      "0\n",
+      "8\n",
+      "0\n",
+      "-4\n",
+      "-4\n",
+      "-4\n",
+      "-8\n",
+      "-8\n",
+      "-8\n",
+      "-8\n",
+      "-8\n",
+      "-8\n",
+      "-8\n",
+      "-8\n"
+     ]
     }
    ],
    "source": [
     "ising = FullyConnectedRandomBondIsing(20, J=1)\n",
-    "ising.spins\n",
-    "ising.energy()"
+    "# This is getting ground state exactly  \n",
+    "ising = RandomBondIsing1DPBC(10, J=1) \n",
+    "dim = np.arange(2 ** ising.num_spins)\n",
+    "space = ((dim[:, None] & (1 << np.arange(ising.num_spins))) > 0)\n",
+    "space = 2*space.astype(int) - 1\n",
+    "ising.energy(space).min()\n",
+    "print(\"=== Exact Energy Calculation for 20 ===\")\n",
+    "print(ising.energy(space).min())\n",
+    "\n",
+    "print(\"\\n=== Annealing Energy Calculation for 20 ===\")\n",
+    "annealed_energy = annealing_schedule(N,T_i,T_f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-2997.0"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Annealing Energy Calculation for 50 ===\n",
+      "-77.0\n",
+      "9.0\n",
+      "-7.0\n",
+      "-63.0\n",
+      "-39.0\n",
+      "9.0\n",
+      "-29.0\n",
+      "-85.0\n",
+      "-101.0\n",
+      "-197.0\n",
+      "-231.0\n",
+      "-259.0\n",
+      "-259.0\n",
+      "-259.0\n",
+      "-259.0\n",
+      "-259.0\n",
+      "-259.0\n",
+      "-259.0\n",
+      "-259.0\n",
+      "-259.0\n"
+     ]
     }
    ],
    "source": [
     "ising = FullyConnectedRandomBondIsing(50, J=1)\n",
-    "ising.spins\n",
-    "ising.energy()"
+    "print(\"\\n=== Annealing Energy Calculation for 50 ===\")\n",
+    "annealed_energy = annealing_schedule(N,T_i,T_f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-3108.0"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Annealing Energy Calculation for 100 ===\n",
+      "88.0\n",
+      "-32.0\n",
+      "-76.0\n",
+      "-6.0\n",
+      "-164.0\n",
+      "-8.0\n",
+      "-266.0\n",
+      "-400.0\n",
+      "-418.0\n",
+      "-658.0\n",
+      "-682.0\n",
+      "-714.0\n",
+      "-714.0\n",
+      "-714.0\n",
+      "-714.0\n",
+      "-714.0\n",
+      "-714.0\n",
+      "-714.0\n",
+      "-714.0\n",
+      "-714.0\n"
+     ]
     }
    ],
    "source": [
     "ising = FullyConnectedRandomBondIsing(100, J=1)\n",
-    "ising.spins\n",
-    "ising.energy()"
+    "print(\"\\n=== Annealing Energy Calculation for 100 ===\")\n",
+    "annealed_energy = annealing_schedule(N,T_i,T_f)"
    ]
   },
   {
