Task 3: Fix energy printout issue

--- a/Project_4_Ising_Annealer/Task_3.ipynb
+++ b/Project_4_Ising_Annealer/Task_3.ipynb
@@ -161,26 +161,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 0, Energy=0\n",
-      "Iteration 50, Energy=0\n",
-      "Iteration 100, Energy=0\n",
-      "Iteration 150, Energy=0\n",
-      "Iteration 200, Energy=0\n",
-      "Iteration 250, Energy=-1\n",
-      "Iteration 300, Energy=0\n",
-      "Iteration 350, Energy=0\n",
-      "Iteration 400, Energy=0\n",
-      "Iteration 450, Energy=0\n",
-      "Iteration 500, Energy=-1\n",
-      "Iteration 550, Energy=0\n",
-      "Iteration 600, Energy=0\n",
-      "Iteration 650, Energy=-1\n",
-      "Iteration 700, Energy=0\n",
-      "Iteration 750, Energy=0\n",
-      "Iteration 800, Energy=0\n",
-      "Iteration 850, Energy=0\n",
-      "Iteration 900, Energy=0\n",
-      "Iteration 950, Energy=0\n",
+      "Iteration 0, Energy=-0.192225\n",
+      "Iteration 50, Energy=0.397312\n",
+      "Iteration 100, Energy=-0.485571\n",
+      "Iteration 150, Energy=-0.485571\n",
+      "Iteration 200, Energy=-0.333193\n",
+      "Iteration 250, Energy=0.572457\n",
+      "Iteration 300, Energy=-0.402052\n",
+      "Iteration 350, Energy=-0.402052\n",
+      "Iteration 400, Energy=-0.333193\n",
+      "Iteration 450, Energy=0.817159\n",
+      "Iteration 500, Energy=-1.129905\n",
+      "Iteration 550, Energy=0.572457\n",
+      "Iteration 600, Energy=-0.333193\n",
+      "Iteration 650, Energy=-0.192225\n",
+      "Iteration 700, Energy=-0.259242\n",
+      "Iteration 750, Energy=-0.402052\n",
+      "Iteration 800, Energy=-0.333193\n",
+      "Iteration 850, Energy=-0.333193\n",
+      "Iteration 900, Energy=-0.259242\n",
+      "Iteration 950, Energy=-0.402052\n",
       "The final spin configuration:  [-1 -1 -1 -1]\n",
       "The energy of the configuration:  [-0.33319338]\n"
      ]
@@ -198,7 +198,7 @@
     "    E = ising.mc_step(T=T)\n",
     "    \n",
     "    if t % 50 == 0:\n",
-    "        print(\"Iteration %i, Energy=%i\" % (t, E))\n",
+    "        print(\"Iteration %i, Energy=%f\" % (t, E))\n",
     "        \n",
     "print(\"The final spin configuration: \", ising.spins)\n",
     "print(\"The energy of the configuration: \", ising.energy())"
