Challenge 2,3: Scratch the implementation on dwave

--- a/Project_4_Ising_Annealer/Task_3.ipynb
+++ b/Project_4_Ising_Annealer/Task_3.ipynb
@@ -6506,6 +6506,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Solve with Dwave\n",
+    "\n",
+    "As we know, the Dwave machines can solve QUBO problems only. The hydrogen molecule we have seen above has a polynomial hamiltonian, but is not a QUBO (its of 4th degree). To be able to run this against Dwave we need to convert it to a QUBO problem by adding more variables. \n",
+    "\n",
+    "The function `dimod.make_quadratic` from Dwave's software takes any higher order polynomial model and converts it to a quatratic one. Let us obtain the corresponding quadratic model with this function and run against Dwave devices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dimod\n",
+    "import neal\n",
+    "from itertools import product\n",
+    "\n",
+    "E0, h, J, K, L = read_generalized_ising_hamiltonian(\"./hamiltonians/Ising-H2-STO-3G-bk-samespin-R=0.65.inp\")\n",
+    "\n",
+    "poly = {}\n",
+    "num_spins = len(h)\n",
+    "for i in range(num_spins):\n",
+    "    if h[i] != 0:\n",
+    "        poly[(i,)] = h[i]\n",
+    "    \n",
+    "for i,j in product(range(num_spins), repeat=2):\n",
+    "    if J[i, j] != 0:\n",
+    "        poly[(i, j)] = J[i, j]\n",
+    "        \n",
+    "for i,j,k in product(range(num_spins), repeat=3):\n",
+    "    if K[i, j, k] != 0:\n",
+    "        poly[(i, j, k)] = K[i, j, k]\n",
+    "        \n",
+    "for i,j,k,l in product(range(num_spins), repeat=4):\n",
+    "    if L[i, j, k, l] != 0:\n",
+    "        poly[(i, j, k, l)] = L[i, j, k, l]\n",
+    "        \n",
+    "bqm = dimod.make_quadratic(poly, 10, dimod.SPIN)\n",
+    "bqm.offset += E0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.1299047752322977"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sampler = neal.SimulatedAnnealingSampler()\n",
+    "sampler.sample(bqm, num_reads=100).lowest().first.energy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
