make fns more general

--- a/Project_4_Ising_Annealer/Task_3.ipynb
+++ b/Project_4_Ising_Annealer/Task_3.ipynb
@@ -285,13 +285,13 @@
     "terms = [E0, h, J, K, L]\n",
     "hydrogen = GeneralizedIsingModel(terms)\n",
     "\n",
-    "def loop_over_spins(hydrogen):\n",
+    "def loop_over_spins(ising: AbstractIsing):\n",
     "    gs_energy = np.inf\n",
-    "    configs = it.product((-1, 1), repeat=4)\n",
+    "    configs = it.product((-1, 1), repeat=ising.num_spins)\n",
     "\n",
     "    for spins in configs:\n",
-    "        hydrogen.spins =  list(spins)\n",
-    "        current_energy = hydrogen.energy()\n",
+    "        ising.spins =  list(spins)\n",
+    "        current_energy = ising.energy()\n",
     "        if current_energy < gs_energy:\n",
     "            gs_energy = current_energy\n",
     "    print('Ground state energy: {}'.format(gs_energy))\n",
