--- a/Project_4_Ising_Annealer/Challenge_4_Ising_Graph_Partition.ipynb
+++ b/Project_4_Ising_Annealer/Challenge_4_Ising_Graph_Partition.ipynb
@@ -85,10 +85,14 @@
     "The Hamiltonian to describe the graph partition problem is given by:\n",
     "$$H  = H_A + H_B$$\n",
     "where\n",
+    "\n",
     "$$H_A = A\\left(\\sum_{n=1}^{N} z_i \\right)^2$$\n",
+    "\n",
     "which penalises for having the two sets (marked by the Ising spin values, $\\pm1$) of unequal weight.\n",
     "and\n",
-    "$$H_B = B \\sum_{(uv \\in E)} \\frac{1 - z_uz_v}{2}\n",
+    "\n",
+    "$$H_B = B \\sum_{(uv \\in E)} \\frac{1 - z_uz_v}{2}$$\n",
+    "\n",
     "Which penalises for the number of connections across the subsets.\n",
     "$A$ and $B$ are weights which we can determine, but for now we will weight each equally, $A = B = 0.5$."
    ],
@@ -591,12 +595,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "outputs": [],
    "source": [
     "def hyperparameter_search(n_nodes: int, n_edges: int = None, n_repetitions: int = 10, n_searches: int = 10):\n",
     "    step = 1 / n_searches\n",
-    "    ratio = np.arange(0, 1, step)\n",
+    "    ratio = np.arange(step, 1 + step, step)\n",
     "    for r in ratio:\n",
     "        acc = 0\n",
     "        A = r\n",
@@ -866,7 +870,9 @@
    "cell_type": "markdown",
    "source": [
     "In this instance, it seems that the accuracy is best when $A = 0.2, B = 0.8$, which is far from the naieve\n",
-    "implementation of $A = B = 0.5$, showing the usefulness of running a hyperparameter search. However, it is not obvious\n",
+    "implementation of $A = B = 0.5$, showing the usefulness of running a hyperparameter search.\n",
+    "\n",
+    " However, it is not obvious\n",
     "that these parameters will hold for other graph instances. It may be useful to runa  hyperparameter search on smaller\n",
     "graphs with the same charachteristics before annealing on the whole model.\n",
     "\n",
