--- a/Project_4_Ising_Annealer/Task_3.ipynb
+++ b/Project_4_Ising_Annealer/Task_3.ipynb
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next you'll run a Monte Carlo simulation for this model at some finite temperature for 1000 steps, printing out the energy of the state every so often"
+    "Next we run a Monte Carlo simulation for this model at some finite temperature for 1000 steps, printing out the energy of the state every so often"
    ]
   },
   {
@@ -219,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, apply (one of) the annealing procedure(s) you came up with in the previous task to this problem to find a ground state of the system:"
+    "Now, let us apply (one of) the annealing procedure(s) we came up with in the previous notebook to this problem to find a ground state of the system:"
    ]
   },
   {
@@ -6381,7 +6381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, iterate over the entire spin configuration space (this is tractable since we only have 4 spins) to find the exact ground state energy. Compare this energy to the one you found above using your annealer."
+    "Finally, let us iterate over the entire spin configuration space (this is tractable since we only have 4 spins) to find the exact ground state energy. Compare this energy to the one you found above using your annealer."
    ]
   },
   {
@@ -6409,13 +6409,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, clean up your code a little, and write a for-loop that iterates over all the different values of the Hydrogen seperation distance $R$ available in the `hamiltonians` directory. \n",
+    "Now, we loop over all hamiltonian files under the `./hamiltoniasn` folder, and calculates the energy minimum using an annealing procedure. Recall, that different hamiltonian files in this folder correspond to different separation distance between hydrogen atoms in a hydrogen molecule. Our goal is to find the miminal energy for each separation length, and compare different separation legths to see which one is the stable configuration. \n",
     "\n",
-    "For each $R$ you must:\n",
+    "For each separation distance (each file) we will:\n",
     "- Read in the associated Ising Hamiltonian\n",
     "- Perform an annealed Monte Carlo simulation to find a candidate ground state energy\n",
-    "- Compute the exact ground state energy\n",
-    "- Compare the two results"
+    "- Compute the exact ground state energy"
    ]
   },
   {
@@ -6484,7 +6483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, the minimum of the energy corresponds to interatomic distance somewhere around 0.7 Angstrom. As we know from other theoretical research (e.g. [this paper](https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.7b10371)) and scientific databases (such as [NIST's expermiental geometry database](https://cccbdb.nist.gov/expgeom1x.asp)), the equilibrium geometry of the hydrogen molecule corresponds to 0.7414 Angstrom. Hence the theoretical model we have discussed in this notebook is accurate.\n",
+    "First of all, as we can see the results of simulations are pretty close to the exact calculations. Secondly, the stable configuration of the atoms corresponds to interatomic distance somewhere around 0.7 Angstrom. As we know from scientific databases (such as [NIST's expermiental geometry database](https://cccbdb.nist.gov/expgeom1x.asp)), the equilibrium geometry of the hydrogen molecule corresponds to $0.74$ Angstrom. Hence the theoretical model we have discussed in this notebook is accurate.\n",
     "\n",
     "Let us also compare the exact results calculated above with the results in `./hamiltonians/summary.dat`"
    ]
