Task 2: minor cosmetic change

--- a/Project_4_Ising_Annealer/Task_2.ipynb
+++ b/Project_4_Ising_Annealer/Task_2.ipynb
@@ -13890,7 +13890,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let us apply the annealing algorithm we have developed in the two previous parts to this model to the fully connected Mattis model. We will use exponential temperature decay schedule. \n",
+    "Let us apply the annealing algorithm we have developed in the two previous parts to this model to the fully connected Mattis model with exponential decay schedule. We will use exponential temperature decay schedule. \n",
     "\n",
     "At the end of the annealing procedure we will confirm that we've found the ground state by checking that $\\xi_i$ is equal to $\\sigma_i$ upto a global sign, i.e. if we we multiply the spin configuration elementwise with $\\xi$, we will get all ones, or all minus ones."
    ]
