--- a/Project_4_Ising_Annealer/Task_3.ipynb
+++ b/Project_4_Ising_Annealer/Task_3.ipynb
@@ -68,11 +68,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.03775117547636375\n",
+      "[0.         0.18262644 0.12584137 0.19100352]\n",
+      "[[ 0.          0.          0.12584137  0.00837708]\n",
+      " [ 0.          0.          0.          0.1729761 ]\n",
+      " [ 0.          0.          0.         -0.27288405]\n",
+      " [ 0.          0.          0.          0.        ]]\n",
+      "[[[ 0.          0.          0.          0.        ]\n",
+      "  [ 0.          0.         -0.26450696  0.17866778]\n",
+      "  [ 0.          0.          0.         -0.00837708]\n",
+      "  [ 0.          0.          0.          0.        ]]\n",
+      "\n",
+      " [[ 0.          0.          0.          0.        ]\n",
+      "  [ 0.          0.          0.          0.        ]\n",
+      "  [ 0.          0.          0.          0.16992098]\n",
+      "  [ 0.          0.          0.          0.        ]]\n",
+      "\n",
+      " [[ 0.          0.          0.          0.        ]\n",
+      "  [ 0.          0.          0.          0.        ]\n",
+      "  [ 0.          0.          0.          0.        ]\n",
+      "  [ 0.          0.          0.          0.        ]]\n",
+      "\n",
+      " [[ 0.          0.          0.          0.        ]\n",
+      "  [ 0.          0.          0.          0.        ]\n",
+      "  [ 0.          0.          0.          0.        ]\n",
+      "  [ 0.          0.          0.          0.        ]]]\n",
+      "[[[[0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]]\n",
+      "\n",
+      "  [[0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.16992098]\n",
+      "   [0.         0.         0.         0.        ]]\n",
+      "\n",
+      "  [[0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]]\n",
+      "\n",
+      "  [[0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]]]\n",
+      "\n",
+      "\n",
+      " [[[0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]]\n",
+      "\n",
+      "  [[0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]]\n",
+      "\n",
+      "  [[0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]]\n",
+      "\n",
+      "  [[0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]]]\n",
+      "\n",
+      "\n",
+      " [[[0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]]\n",
+      "\n",
+      "  [[0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]]\n",
+      "\n",
+      "  [[0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]]\n",
+      "\n",
+      "  [[0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]]]\n",
+      "\n",
+      "\n",
+      " [[[0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]]\n",
+      "\n",
+      "  [[0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]]\n",
+      "\n",
+      "  [[0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]]\n",
+      "\n",
+      "  [[0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]\n",
+      "   [0.         0.         0.         0.        ]]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "E0, h, J, K, L = read_generalized_ising_hamiltonian(\"./hamiltonians/Ising-H2-STO-3G-bk-samespin-R=0.65.inp\")"
+    "E0, h, J, K, L = read_generalized_ising_hamiltonian(\"./hamiltonians/Ising-H2-STO-3G-bk-samespin-R=0.65.inp\")\n",
+    "\n",
+    "#print(E0)\n",
+    "#print(h)\n",
+    "#print(J)\n",
+    "#print(K)\n",
+    "#print(L)"
    ]
   },
   {
@@ -89,20 +209,46 @@
    "outputs": [],
    "source": [
     "# Write a class to describe the generalized Ising Model given its Hamiltonian parameters\n",
-    "\n",
+    "# Only need 4 spins\n",
     "class GeneralizedIsingModel(AbstractIsing):\n",
-    "    def __init__(self):\n",
-    "        pass\n",
+    "    def __init__(self, N, E0, h, J, K, L):\n",
+    "        self.N = N\n",
+    "        self.E0 = E0\n",
+    "        self.h = h\n",
+    "        self.J = J\n",
+    "        self.K = K\n",
+    "        self.L = L\n",
+    "        self.num_spins = self.N\n",
+    "        \n",
+    "        # initialize system at infinite temperature\n",
+    "        # i.e. spins are completely random and uncorrelated\n",
+    "        self.spins = 2*(np.random.rand(self.N) < 0.5) - 1\n",
     "    \n",
     "    def energy(self):\n",
     "        # hint: np.einsum may be helpful here\n",
+    "        \"\"\"Returns the energy of the current spin configuration\"\"\"\n",
+    "        spins = self.spins if spins is None else spins\n",
+    "        #interactions = self.bonds * spins * np.roll(spins, 1, axis=-1)\n",
+    "        #total = self.J * np.sum(interactions, axis=-1)\n",
+    "        # E0 + h_i + J_ij + K_ijk + L_ijkl\n",
+    "        total = self.E0 + np.einsum('i',h) + np.einsum('ij->i',J) + np.einsum('ijk->i', K) + np.einsum('ijkl->i', L)\n",
+    "        return total\n",
     "        pass\n",
     "    \n",
     "    def energy_diff(self, *coords):\n",
-    "        pass\n",
+    "        \"\"\"Returns the energy difference resulting from flipping the i'th site\"\"\"\n",
+    "        # sum the nearest neighbour sites\n",
+    "        \n",
+    "        nn_sum = (\n",
+    "            self.bonds[i] * self.spins[i-1] \n",
+    "            + self.bonds[(i+1)%self.N] * self.spins[(i+1) % self.N] \n",
+    "        )\n",
+    "\n",
+    "        return -2 * self.J * self.spins[i] * nn_sum\n",
     "    \n",
     "    def rand_site(self):\n",
-    "        pass"
+    "        \"\"\"Selects a site in the lattice at random\"\"\"\n",
+    "        return (np.random.randint(self.N),)"
    ]
   },
   {
@@ -117,9 +263,7 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your MC simulation here"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -134,7 +278,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your annealing code here"
+    "# your annealing code here\n",
+    "def annealing_schedule(steps, start_temp, final_temp):\n",
+    "    N = steps\n",
+    "    T_i = start_temp\n",
+    "    T_f = final_temp\n",
+    "    for t in range(N):\n",
+    "        # Annealing\n",
+    "        T = T_i * ((T_f/T_i) ** (t/N))\n",
+    "        E = ising.mc_step(T=T)\n",
+    "\n",
+    "        if t % 50 == 0:\n",
+    "            print(E)\n",
+    "            \n",
+    "    return E\n",
+    "\n",
+    "# Steps in MC\n",
+    "N = 1000\n",
+    "\n",
+    "# Starting temperature\n",
+    "T_i = 1000\n",
+    "\n",
+    "# Final Temperature\n",
+    "T_f = 0.01\n",
+    "\n",
+    "print(\"\\n=== Annealing Energy Calculation for 4 spins ===\")\n",
+    "annealed_energy = annealing_schedule(N,T_i,T_f)"
    ]
   },
   {
@@ -190,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
