Ready to test h2 before doing LiH

--- a/Project_4_Ising_Annealer/W2_Hamiltonian_gen.ipynb
+++ b/Project_4_Ising_Annealer/W2_Hamiltonian_gen.ipynb
@@ -10,19 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "import tequila as tq\n",
-    "from utility import *\n",
+    "from utility import * #you will need this utility.py from week2\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
       "Number of Hamiltonian terms: 15\n",
       "Number of terms in Taper effective Hamiltonian (H_eff): 3\n",
       "The eigenvalues of the effective Hamiltonian:[-1.10115031  0.03904763]\n",
-      "H2 Hamiltonian using  JW  in basis: STO-3G generated for: 1.2697703838348389  sec\n",
+      "H2 Hamiltonian using  JW  in basis: STO-3G generated for: 1.5315170288085938  sec\n",
       "\n"
      ]
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "-0.13036292057109117 [Z3]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "-0.5350572998841723 [Z0]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def imp_form4(allz):\n",
+    "    new_form={}\n",
+    "    for keys in allz.terms:\n",
+    "        eeee=list('eeee')\n",
+    "        for key in keys:\n",
+    "            eeee[key[0]]=\"z\"\n",
+    "        new_form[\"\".join(eeee)]=allz.terms[keys]\n",
+    "    return new_form "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -269,8 +285,8 @@
       "0.13716572937099467 [Z1] +\n",
       "-0.13036292057109095 [Z2] +\n",
       "-0.13036292057109095 [Z3]\n",
-      "CPU times: user 75.6 ms, sys: 30 µs, total: 75.6 ms\n",
-      "Wall time: 74.6 ms\n"
+      "CPU times: user 55 ms, sys: 0 ns, total: 55 ms\n",
+      "Wall time: 53.9 ms\n"
      ]
     }
    ],
@@ -278,6 +294,7 @@
     "%%time\n",
     "#One has to loop over all groups\n",
     "\n",
+    "new_form=[]\n",
     "for i in range(1,len(comm_groups)+1):\n",
     "    uqwc = get_qwc_unitary(comm_groups[i])\n",
     "    qwc = remove_complex(uqwc * comm_groups[i] * uqwc)\n",
@@ -286,32 +303,178 @@
     "    print(\"Checking whether U * U^+ is identity: {}\".format(uz * uz))\n",
     "\n",
     "    allz = remove_complex(uz * qwc * uz)\n",
-    "    print(\"\\nThe all-z form of qwc fragment:\\n{}\".format(allz))"
+    "    print(\"\\nThe all-z form of qwc fragment:\\n{}\".format(allz))\n",
+    "    new_form.append(imp_form4(allz))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "[{'ezzz': -0.049197645871367504,\n",
+       "  'eezz': 0.049197645871367504,\n",
+       "  'zzez': 0.049197645871367504,\n",
+       "  'zeez': -0.049197645871367504,\n",
+       "  'eeze': 0.16326768673564326,\n",
+       "  'ezee': 0.10622904490856065,\n",
+       "  'ezze': 0.15542669077992813,\n",
+       "  'zeee': 0.15542669077992813,\n",
+       "  'zeze': 0.10622904490856065,\n",
+       "  'zzee': 0.15660062488237922,\n",
+       "  'eeee': -0.3276081896748086},\n",
+       " {'eeez': -0.13036292057109095,\n",
+       "  'eeze': -0.13036292057109095,\n",
+       "  'ezee': 0.13716572937099467,\n",
+       "  'zeee': 0.13716572937099475}]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(comm_groups)"
+    "new_form"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 11 real\n",
+      "ezzz -0.049197645871367504\n",
+      "eezz 0.049197645871367504\n",
+      "zzez 0.049197645871367504\n",
+      "zeez -0.049197645871367504\n",
+      "eeze 0.16326768673564326\n",
+      "ezee 0.10622904490856065\n",
+      "ezze 0.15542669077992813\n",
+      "zeee 0.15542669077992813\n",
+      "zeze 0.10622904490856065\n",
+      "zzee 0.15660062488237922\n",
+      "eeee -0.3276081896748086\n",
+      "4 4 real\n",
+      "eeez -0.13036292057109095\n",
+      "eeze -0.13036292057109095\n",
+      "ezee 0.13716572937099467\n",
+      "zeee 0.13716572937099475\n",
+      "\n",
+      "4 12 real R= 1 E[Eh]= -1.1011503301329566  Use the lines below only!\n",
+      "ezzz -0.049197645871367504\n",
+      "eezz 0.049197645871367504\n",
+      "zzez 0.049197645871367504\n",
+      "zeez -0.049197645871367504\n",
+      "eeze 0.03290476616455232\n",
+      "ezee 0.2433947742795553\n",
+      "ezze 0.15542669077992813\n",
+      "zeee 0.2925924201509229\n",
+      "zeze 0.10622904490856065\n",
+      "zzee 0.15660062488237922\n",
+      "eeee -0.3276081896748086\n",
+      "eeez -0.13036292057109095\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_lements=0\n",
+    "all_togeter={}\n",
+    "for group in new_form:\n",
+    "    print(4,len(group),'real')\n",
+    "    for elemet in group:\n",
+    "        print(elemet,group[elemet])\n",
+    "        if elemet in all_togeter:\n",
+    "            temp=all_togeter[elemet]\n",
+    "            temp+=group[elemet]\n",
+    "            all_togeter[elemet]=temp\n",
+    "        else:\n",
+    "            n_lements+=1\n",
+    "            temp=group[elemet]\n",
+    "            all_togeter[elemet]=temp\n",
+    "\n",
+    "print()        \n",
+    "print(4,n_lements,'real',\"R=\",R,\"E[Eh]=\",E_cisd[0],\" Use the lines below only!\")\n",
+    "for key in all_togeter:\n",
+    "    print(key,all_togeter[key])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.22785180379199269"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-0.3796856633927857+0.15183385960079301"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'terms': {((3, 'Z'),): -0.13036292057109095,\n",
+       "  ((2, 'Z'),): -0.13036292057109095,\n",
+       "  ((1, 'Z'),): 0.13716572937099467,\n",
+       "  ((0, 'Z'),): 0.13716572937099475}}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "allz.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'eeez': -0.13036292057109095,\n",
+       " 'eeze': -0.13036292057109095,\n",
+       " 'ezee': 0.13716572937099467,\n",
+       " 'zeee': 0.13716572937099475}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imp_form4(allz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +483,7 @@
        "-1.0661086493179361"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
