--- a/Project_4_Ising_Annealer/W2_Hamiltonian_gen.ipynb
+++ b/Project_4_Ising_Annealer/W2_Hamiltonian_gen.ipynb
@@ -10,11 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import tequila as tq\n",
     "from utility import *\n",
     "import time"
@@ -22,35 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Running with cell goes over all possible optinons  \n",
-    "molecules=['h2','h4','lih','h2o','n2','nh3']\n",
-    "methods=['hf','cisd','ccsd','fci']\n",
-    "basies=['sto-3g','6-31g']\n",
-    "qubit_transfms=['jw','bk'] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Fcus on one molecule\n",
+    "#Focus on one molecule\n",
     "molecules=['h2']\n",
     "methods=['cisd']\n",
     "basies=['sto-3g']\n",
-    "qubit_transfms=['jw'] \n",
-    "\n",
-    "qubit_transf = 'jw' # Jordan-Wigner transformations"
+    "qubit_transfms=['bk'] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -58,21 +42,21 @@
      "output_type": "stream",
      "text": [
       "Take a look at H!\n",
-      "r=1.0000, E =  -1.10115 Eh\n",
-      "CISD  ground state energy is: [-1.10115033]\n",
+      "E = -1.129904784381681 Eh\n",
+      "CISD  ground state energy is: [-1.12990478]\n",
       "Numbers of electrons: 2 \n",
-      "Using  JW  in  STO-3G basis. \n",
+      "Using  BK  in  STO-3G basis. \n",
       "Number of spin-orbitals (qubits): 4 \n",
       "Number of Hamiltonian terms: 15\n",
       "Number of terms in Taper effective Hamiltonian (H_eff): 3\n",
       "The eigenvalues of the effective Hamiltonian:[-1.10115031  0.03904763]\n",
-      "H2 Hamiltonian using  JW  in basis: STO-3G generated for: 1.2697703838348389  sec\n",
+      "H2 Hamiltonian using  BK  in basis: STO-3G generated for: 1.5354807376861572  sec\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "R=1 #bond_length\n",
+    "R=0.65 #bond_length\n",
     "\n",
     "for mol in molecules:\n",
     "\n",
@@ -82,7 +66,7 @@
     "                    \n",
     "            start=time.time()\n",
     "            \n",
-    "            H = get_qubit_hamiltonian(mol, geometry=R, basis=basis, qubit_transf=qubit_transf)\n",
+    "            H = get_qubit_hamiltonian(mol, geometry=R, basis=basis, multiplicity=3, qubit_transf=qubit_transf)\n",
     "            print(\"Take a look at H!\")\n",
     "            \n",
     "            xyz_data = get_molecular_data(mol, geometry=R, xyz_format=True)\n",
@@ -121,63 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.32760818967480887 [] +\n",
-       "-0.04919764587136755 [X0 X1 Y2 Y3] +\n",
-       "0.04919764587136755 [X0 Y1 Y2 X3] +\n",
-       "0.04919764587136755 [Y0 X1 X2 Y3] +\n",
-       "-0.04919764587136755 [Y0 Y1 X2 X3] +\n",
-       "0.13716572937099497 [Z0] +\n",
-       "0.15660062488237947 [Z0 Z1] +\n",
-       "0.10622904490856075 [Z0 Z2] +\n",
-       "0.15542669077992832 [Z0 Z3] +\n",
-       "0.13716572937099492 [Z1] +\n",
-       "0.15542669077992832 [Z1 Z2] +\n",
-       "0.10622904490856075 [Z1 Z3] +\n",
-       "-0.13036292057109117 [Z2] +\n",
-       "0.16326768673564346 [Z2 Z3] +\n",
-       "-0.13036292057109117 [Z3]"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "H"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.5310513494337641 [] +\n",
-       "0.1967905834854702 [X0] +\n",
-       "-0.5350572998841723 [Z0]"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "H_eff"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -185,13 +113,17 @@
      "output_type": "stream",
      "text": [
       "Fragments 1: \n",
-      "-0.32760818967480887 [] +\n",
-      "0.04919764587136755 [X0 Y1 Y2 X3]\n",
+      "0.03775110394645728 [] +\n",
+      "0.04407961290255181 [Y0 Z1 Y2] +\n",
+      "0.04407961290255181 [Y0 Z1 Y2 Z3] +\n",
+      "0.17297610130745106 [Z1] +\n",
+      "0.17866777775953419 [Z1 Z3]\n",
       "\n",
       "Fragments 2:\n",
-      "-0.04919764587136755 [X0 X1 Y2 Y3]\n",
+      "0.04407961290255181 [X0 Z1 X2] +\n",
+      "0.04407961290255181 [X0 Z1 X2 Z3]\n",
       "\n",
-      "Number of fragments: 5\n"
+      "Number of fragments: 3\n"
      ]
     }
    ],
@@ -204,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -213,21 +145,21 @@
      "text": [
       "Number of mutually commuting fragments: 2\n",
       "The first commuting group\n",
-      "-0.32760818967480887 [] +\n",
-      "-0.04919764587136755 [X0 X1 Y2 Y3] +\n",
-      "0.04919764587136755 [X0 Y1 Y2 X3] +\n",
-      "0.04919764587136755 [Y0 X1 X2 Y3] +\n",
-      "-0.04919764587136755 [Y0 Y1 X2 X3] +\n",
-      "0.15660062488237947 [Z0 Z1] +\n",
-      "0.10622904490856075 [Z0 Z2] +\n",
-      "0.15542669077992832 [Z0 Z3] +\n",
-      "0.15542669077992832 [Z1 Z2] +\n",
-      "0.10622904490856075 [Z1 Z3] +\n",
-      "0.16326768673564346 [Z2 Z3]\n",
-      "0.13716572937099497 [Z0] +\n",
-      "0.13716572937099492 [Z1] +\n",
-      "-0.13036292057109117 [Z2] +\n",
-      "-0.13036292057109117 [Z3]\n"
+      "0.03775110394645728 [] +\n",
+      "0.04407961290255181 [X0 Z1 X2] +\n",
+      "0.04407961290255181 [X0 Z1 X2 Z3] +\n",
+      "0.04407961290255181 [Y0 Z1 Y2] +\n",
+      "0.04407961290255181 [Y0 Z1 Y2 Z3] +\n",
+      "0.16992097848261525 [Z0 Z1 Z2] +\n",
+      "0.16992097848261525 [Z0 Z1 Z2 Z3] +\n",
+      "0.12584136558006345 [Z0 Z2] +\n",
+      "0.12584136558006345 [Z0 Z2 Z3] +\n",
+      "0.17297610130745106 [Z1] +\n",
+      "0.17866777775953419 [Z1 Z3]\n",
+      "0.1860164888623057 [Z0] +\n",
+      "0.1860164888623056 [Z0 Z1] +\n",
+      "-0.26941693141632106 [Z1 Z2 Z3] +\n",
+      "-0.26941693141632117 [Z2]\n"
      ]
     }
    ],
@@ -241,8 +173,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -251,26 +185,26 @@
       "Checking whether U * U^+ is identity: 0.9999999999999998 []\n",
       "\n",
       "The all-z form of qwc fragment:\n",
-      "-0.3276081896748086 [] +\n",
-      "0.15542669077992813 [Z0] +\n",
-      "0.15660062488237922 [Z0 Z1] +\n",
-      "0.049197645871367504 [Z0 Z1 Z3] +\n",
-      "0.10622904490856065 [Z0 Z2] +\n",
-      "-0.049197645871367504 [Z0 Z3] +\n",
-      "0.10622904490856065 [Z1] +\n",
-      "0.15542669077992813 [Z1 Z2] +\n",
-      "-0.049197645871367504 [Z1 Z2 Z3] +\n",
-      "0.16326768673564326 [Z2] +\n",
-      "0.049197645871367504 [Z2 Z3]\n",
+      "0.03775110394645723 [] +\n",
+      "0.1258413655800633 [Z0] +\n",
+      "0.16992097848261511 [Z0 Z1] +\n",
+      "-0.044079612902551774 [Z0 Z1 Z2] +\n",
+      "-0.044079612902551774 [Z0 Z1 Z2 Z3] +\n",
+      "0.16992097848261511 [Z0 Z1 Z3] +\n",
+      "0.1258413655800633 [Z0 Z3] +\n",
+      "0.1729761013074509 [Z1] +\n",
+      "0.044079612902551774 [Z1 Z2] +\n",
+      "0.044079612902551774 [Z1 Z2 Z3] +\n",
+      "0.17866777775953396 [Z1 Z3]\n",
       "Checking whether U * U^+ is identity: 0.9999999999999996 []\n",
       "\n",
       "The all-z form of qwc fragment:\n",
-      "0.13716572937099475 [Z0] +\n",
-      "0.13716572937099467 [Z1] +\n",
-      "-0.13036292057109095 [Z2] +\n",
-      "-0.13036292057109095 [Z3]\n",
-      "CPU times: user 75.6 ms, sys: 30 µs, total: 75.6 ms\n",
-      "Wall time: 74.6 ms\n"
+      "0.18601648886230557 [Z0] +\n",
+      "0.1860164888623054 [Z0 Z1] +\n",
+      "-0.26941693141632056 [Z1 Z2 Z3] +\n",
+      "-0.2694169314163207 [Z2]\n",
+      "CPU times: user 118 ms, sys: 0 ns, total: 118 ms\n",
+      "Wall time: 116 ms\n"
      ]
     }
    ],
@@ -278,6 +212,7 @@
     "%%time\n",
     "#One has to loop over all groups\n",
     "\n",
+    "allz_list = []  # store the allz from all iterations\n",
     "for i in range(1,len(comm_groups)+1):\n",
     "    uqwc = get_qwc_unitary(comm_groups[i])\n",
     "    qwc = remove_complex(uqwc * comm_groups[i] * uqwc)\n",
@@ -286,48 +221,206 @@
     "    print(\"Checking whether U * U^+ is identity: {}\".format(uz * uz))\n",
     "\n",
     "    allz = remove_complex(uz * qwc * uz)\n",
+    "    allz_list.append(allz)\n",
     "    print(\"\\nThe all-z form of qwc fragment:\\n{}\".format(allz))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 94,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "len(comm_groups)"
+    "Save the info in allz_list into the file `./hamiltonians/test.inp`, which has the same format as all the other files in that directoy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = allz_list[0].many_body_order() # 4\n",
+    "\n",
+    "output = {}\n",
+    "for allz in allz_list:\n",
+    "    for k,v in allz.terms.items():\n",
+    "        key = ['e'] * n\n",
+    "        for spin in k:\n",
+    "            key[n-1-spin[0]] = 'z'\n",
+    "        key_str = ''.join(key)\n",
+    "        output[key_str] = output.get(key_str, 0) + v\n",
+    "        \n",
+    "with open('./hamiltonians/test.inp', 'w') as fh:\n",
+    "    fh.write(\"4 13 real\\n\")\n",
+    "    for k,v in output.items():\n",
+    "        fh.write(k + ' ' + str(v) + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Temporarily copy here some definitions from task 3 for quick testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from common.abstract_ising import AbstractIsing\n",
+    "from common.ising_animator import IsingAnimator\n",
+    "from common.utils import *\n",
+    "\n",
+    "def read_generalized_ising_hamiltonian(path):\n",
+    "    with open(path, \"r\") as f:\n",
+    "        f.readline()  # discard first line\n",
+    "        compressed_hamiltonian = [\n",
+    "            tuple(line.strip().split())\n",
+    "            for line in f.readlines()\n",
+    "        ]\n",
+    "    \n",
+    "    num_sites = len(compressed_hamiltonian[0][0])\n",
+    "    hamiltonian_terms = [np.zeros((num_sites,)*i) for i in range(num_sites+1)]\n",
+    "\n",
+    "    for sites, val in compressed_hamiltonian:\n",
+    "        num_zs = 0\n",
+    "        site_nums = []\n",
+    "        for i, x in enumerate(sites):\n",
+    "            if x == 'z':\n",
+    "                site_nums.append(i)\n",
+    "                num_zs += 1\n",
+    "\n",
+    "        hamiltonian_terms[num_zs][tuple(site_nums)] = float(val)\n",
+    "\n",
+    "    return hamiltonian_terms\n",
+    "\n",
+    "\n",
+    "class GeneralizedIsingModel(AbstractIsing):\n",
+    "    def __init__(self, E0, h, J, K, L):\n",
+    "        self.E0 = E0[()]\n",
+    "        self.h = h\n",
+    "        self.J = J\n",
+    "        self.K = K\n",
+    "        self.L = L\n",
+    "        \n",
+    "        self.num_spins = h.shape[0]\n",
+    "        \n",
+    "        # initialize the spins randomly\n",
+    "        self.spins = 2 * (np.random.rand(self.num_spins) < 0.5) - 1\n",
+    "    \n",
+    "    def energy(self, spins=None):\n",
+    "        \"\"\"\n",
+    "        Args:\n",
+    "            spins: a single spin configuration, or a list of spin configurations\n",
+    "            \n",
+    "        Returns:\n",
+    "            Energies corresponding to the given spin configurations\n",
+    "        \"\"\"\n",
+    "        if spins is None:\n",
+    "            spins = self.spins\n",
+    "            \n",
+    "        if len(spins.shape) == 1:\n",
+    "            spins = spins[None, :]\n",
+    "        \n",
+    "        energy = self.E0 * np.ones(spins.shape[0])\n",
+    "        energy += np.einsum('i,bi->b', self.h, spins)\n",
+    "        energy += np.einsum('ij,bi,bj->b', self.J, spins, spins)\n",
+    "        energy += np.einsum('ijk,bi,bj,bk->b', self.K, spins, spins, spins)\n",
+    "        energy += np.einsum('ijkl,bi,bj,bk,bl->b', self.L, spins, spins, spins, spins)\n",
+    "        \n",
+    "        return energy\n",
+    "    \n",
+    "    def energy_diff(self, i):\n",
+    "        dE = 0\n",
+    "        for coef in [self.h, self.J, self.K, self.L]:\n",
+    "            tmp = 0\n",
+    "            for j in range(len(coef.shape)):\n",
+    "                tmp += np.moveaxis(coef, j, 0)[i]\n",
+    "            for _ in range(len(coef.shape) - 1):\n",
+    "                tmp = tmp.dot(self.spins)\n",
+    "            dE += tmp     \n",
+    "        dE *= -2 * self.spins[i] \n",
+    "        \n",
+    "        return dE\n",
+    "        \n",
+    "    \n",
+    "    def rand_site(self):\n",
+    "        return (np.random.randint(self.num_spins),)\n",
+    "    \n",
+    "    def all_configurations(self):\n",
+    "        \"\"\"Returns all possible spin configurations\"\"\"\n",
+    "        dim = np.arange(2 ** ising.num_spins)\n",
+    "        space = ((dim[:, None] & (1 << np.arange(ising.num_spins))) > 0)\n",
+    "        space = 2*space.astype(int) - 1\n",
+    "        return space"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Determine the minimum energy for the hamiltonian based on the file we have just created."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-1.0661086493179361"
+       "-0.93667809405896"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#This is E0 at R=1 for h2 using H_eff\n",
-    "-0.531051349433764-0.5350572998841723"
+    "E0, h, J, K, L = read_generalized_ising_hamiltonian(\"./hamiltonians/test.inp\")\n",
+    "ising = GeneralizedIsingModel(E0, h, J, K, L)\n",
+    "ising.energy(ising.all_configurations()).min()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The correct result for R=0.65 should be -1.1299047752322906"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# R(A)         E(Ha)\n",
+    "0.65      -1.1299047752322906\n",
+    "0.8      -1.1341476722233872\n",
+    "0.95      -1.1113394317141152\n",
+    "1.1      -1.0791929635915072\n",
+    "1.25      -1.0457831649744007\n",
+    "1.4      -1.0154682691531118\n",
+    "1.55      -0.9904763585526108\n",
+    "1.7      -0.9714267029717627\n",
+    "1.85      -0.9578329791835556\n",
+    "2.0      -0.9486411206967024\n",
+    "2.15      -0.9426777920320297\n",
+    "2.3      -0.9389223907402545\n",
+    "2.45      -0.9366052600789352\n",
+    "2.6      -0.9351960337828166\n",
+    "2.75      -0.9343489902069892\n",
+    "2.9      -0.9338457529323188\n",
+    "3.05      -0.9335506069059256\n",
+    "3.2      -0.933379979185252\n",
+    "3.35      -0.9332828445659485\n",
+    "3.5      -0.9332284072659003"
    ]
   },
   {
@@ -354,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
