--- a/Project_4_Ising_Annealer/Task_3.ipynb
+++ b/Project_4_Ising_Annealer/Task_3.ipynb
@@ -68,123 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.03775117547636375\n",
-      "[0.         0.18262644 0.12584137 0.19100352]\n",
-      "[[ 0.          0.          0.12584137  0.00837708]\n",
-      " [ 0.          0.          0.          0.1729761 ]\n",
-      " [ 0.          0.          0.         -0.27288405]\n",
-      " [ 0.          0.          0.          0.        ]]\n",
-      "[[[ 0.          0.          0.          0.        ]\n",
-      "  [ 0.          0.         -0.26450696  0.17866778]\n",
-      "  [ 0.          0.          0.         -0.00837708]\n",
-      "  [ 0.          0.          0.          0.        ]]\n",
-      "\n",
-      " [[ 0.          0.          0.          0.        ]\n",
-      "  [ 0.          0.          0.          0.        ]\n",
-      "  [ 0.          0.          0.          0.16992098]\n",
-      "  [ 0.          0.          0.          0.        ]]\n",
-      "\n",
-      " [[ 0.          0.          0.          0.        ]\n",
-      "  [ 0.          0.          0.          0.        ]\n",
-      "  [ 0.          0.          0.          0.        ]\n",
-      "  [ 0.          0.          0.          0.        ]]\n",
-      "\n",
-      " [[ 0.          0.          0.          0.        ]\n",
-      "  [ 0.          0.          0.          0.        ]\n",
-      "  [ 0.          0.          0.          0.        ]\n",
-      "  [ 0.          0.          0.          0.        ]]]\n",
-      "[[[[0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]]\n",
-      "\n",
-      "  [[0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.16992098]\n",
-      "   [0.         0.         0.         0.        ]]\n",
-      "\n",
-      "  [[0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]]\n",
-      "\n",
-      "  [[0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]]]\n",
-      "\n",
-      "\n",
-      " [[[0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]]\n",
-      "\n",
-      "  [[0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]]\n",
-      "\n",
-      "  [[0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]]\n",
-      "\n",
-      "  [[0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]]]\n",
-      "\n",
-      "\n",
-      " [[[0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]]\n",
-      "\n",
-      "  [[0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]]\n",
-      "\n",
-      "  [[0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]]\n",
-      "\n",
-      "  [[0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]]]\n",
-      "\n",
-      "\n",
-      " [[[0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]]\n",
-      "\n",
-      "  [[0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]]\n",
-      "\n",
-      "  [[0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]]\n",
-      "\n",
-      "  [[0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]\n",
-      "   [0.         0.         0.         0.        ]]]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "E0, h, J, K, L = read_generalized_ising_hamiltonian(\"./hamiltonians/Ising-H2-STO-3G-bk-samespin-R=0.65.inp\")\n",
     "\n",
@@ -204,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,27 +114,25 @@
     "        # hint: np.einsum may be helpful here\n",
     "        \"\"\"Returns the energy of the current spin configuration\"\"\"\n",
     "        spins = self.spins if spins is None else spins\n",
-    "        #interactions = self.bonds * spins * np.roll(spins, 1, axis=-1)\n",
-    "        #total = self.J * np.sum(interactions, axis=-1)\n",
     "        # E0 + h_i + J_ij + K_ijk + L_ijkl\n",
-    "        total = self.E0 + np.einsum('i',h) + np.einsum('ij->i',J) + np.einsum('ijk->i', K) + np.einsum('ijkl->i', L)\n",
+    "        # Einsum kicks ass!\n",
+    "        total = self.E0 + np.einsum(\"i,i\",spins,h) + np.einsum(\"i,j,ij\", spins, spins, J) +\n",
+    "        np.einsum(\"i,j,k,ijk\", spins, spins, spins, K) + np.einsum(\"i,j,k,l,ijkl\",spins,spins,spins,spins,L)\n",
     "        return total\n",
-    "        pass\n",
+    "        \n",
     "    \n",
     "    def energy_diff(self, *coords):\n",
     "        \"\"\"Returns the energy difference resulting from flipping the i'th site\"\"\"\n",
     "        # sum the nearest neighbour sites\n",
-    "        \n",
-    "        nn_sum = (\n",
-    "            self.bonds[i] * self.spins[i-1] \n",
-    "            + self.bonds[(i+1)%self.N] * self.spins[(i+1) % self.N] \n",
-    "        )\n",
+    "        pass\n",
     "\n",
-    "        return -2 * self.J * self.spins[i] * nn_sum\n",
+    "        #return -2 * self.J * self.spins[i] * nn_sum\n",
+    "        \n",
     "    \n",
     "    def rand_site(self):\n",
     "        \"\"\"Selects a site in the lattice at random\"\"\"\n",
-    "        return (np.random.randint(self.N),)"
+    "        return (np.random.randint(self.N),)\n",
+    "    \n"
    ]
   },
   {
@@ -260,10 +144,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'spins' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-ae825a5c2323>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mising\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmc_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;31m# Print out E ever so often...\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/CohortProject_2020/Project_4_Ising_Annealer/abstract_ising.py\u001b[0m in \u001b[0;36mmc_step\u001b[0;34m(self, T)\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmc_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;34m\"\"\"Performs a full update of the given Ising model using the Metropolis-Hastings algorithm\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mcurrent_energy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0menergy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnum_spins\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m             \u001b[0msite\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand_site\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-23-ba59459dcdff>\u001b[0m in \u001b[0;36menergy\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0;31m# hint: np.einsum may be helpful here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;34m\"\"\"Returns the energy of the current spin configuration\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mspins\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mspins\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mspins\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mspins\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m         \u001b[0;31m# E0 + h_i + J_ij + K_ijk + L_ijkl\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0;31m# Einsum kicks ass!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'spins' referenced before assignment"
+     ]
+    }
+   ],
+   "source": [
+    "ising = GeneralizedIsingModel(4,E0, h, J, K, L)\n",
+    "# your MC simulation here\n",
+    "# perform 1000 MC steps\n",
+    "for t in range(1000):\n",
+    "\n",
+    "    E = ising.mc_step(T=1.0)\n",
+    "    \n",
+    "    # Print out E ever so often...\n",
+    "    if t % 50 == 0:\n",
+    "        print(E)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -319,7 +228,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exact ground state calculation"
+    "# exact ground state calculation\n",
+    "# This is getting ground state exactly  \n",
+    "# N, E0, h, J, K, L\n",
+    "ising = GeneralizedIsingModel(4,E0, h, J, K, L)\n",
+    "dim = np.arange(2 ** ising.num_spins)\n",
+    "space = ((dim[:, None] & (1 << np.arange(ising.num_spins))) > 0)\n",
+    "space = 2*space.astype(int) - 1\n",
+    "ising.energy(space).min()\n",
+    "print(\"=== Exact Energy Calculation for 4 spins ===\")\n",
+    "print(ising.energy(space).min())"
    ]
   },
   {
