--- a/Project_4_Ising_Annealer/NP_problems.ipynb
+++ b/Project_4_Ising_Annealer/NP_problems.ipynb
@@ -330,9 +330,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cdl_vqe_py3.7.1",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cdl_vqe_py3.7.1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -344,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
