Add small summary of Dwave vs thermal annealing

--- a/Project_4_Ising_Annealer/Task_3.ipynb
+++ b/Project_4_Ising_Annealer/Task_3.ipynb
@@ -6596,7 +6596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO: simulated thermal annealing vs Dwave in a nutshell\n",
+    "There are various ways to do annealing, both physical and simulated. We have developed a framework for simulated thermal annealing and briefly talked about other possibilities in the 2nd notebook. Dwave's annealing differs from these approaches, since its idea comes from adiabatic evolution. In an adiabatic evolution procedure you start at the ground state of a simple hamiltonian, and gradually evolve into the hamiltonian of desire. According to the adiabatic theorem, if one does this transformation \"slowly enough\", then at the end the system will be at the ground state of the desired hamiltonian. Since \"slowly enough\" is usually hard to achieve, instead of adiabatic evolution Dwave does annealing, i.e. it evolves the simple hamiltonian into the desired one at some slow speed, without taking care of it beeing \"slow enough\", but slow enough, that the system does not hop to much higher states. At the end of the procedure sampling is done on the output state with the hope, that the ground state will appear with high probability. Below in this notebook we compare the results from such an annealing procedure with the thermal annealing.\n",
     "\n",
     "Now we can \n",
     "1. loop over all available hamiltonian files, \n",
@@ -6731,7 +6731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
